--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <strong>Grilled Salmon</strong>     
 
-       <p>Salmon fillet seasoned and grilled to perfection, served with lemon butter sauce.</p>   
+       <p>Salmon fillet seasoned and grilled to perfection, served with lemon butter sauce..</p>   
 
      </li>     
 
