--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <strong>Caprese Salad</strong>       
 
-     <p>Fresh tomatoes, mozzarella, and basil drizzled with balsamic glaze.</p> 
+     <p>Fresh tomatoes, mozzarella, and basil drizzled with balsamic glaze..</p> 
 
        </li>    
 
